basket checkout page update

--- a/site/views/basket/checkout.html
+++ b/site/views/basket/checkout.html
@@ -27,7 +27,7 @@
             -->
             <div style="margin-top:20px;">
                 <h4>Shopping cart items</h4>
-                <table class="table table-bordered">
+                <table class="table table-bordered" style="margin-top:20px;">
                     <thead>
                         <tr>
                             <th>Product</th>
@@ -56,18 +56,18 @@
         <div class="col-md-5">
             <div>
                 <h4>Payment Info</h4>
-                <table class="table borderless">
+                <table class="table borderless" style="margin-top:20px;">
                     <tbody>
                         <tr>
-                            <td>First Name</td>
+                            <td>Card Number</td>
                             <td><input class="form-control" type="input" /></td>
                         </tr>
                         <tr>
-                            <td>Last Name</td>
+                            <td>Name on Card</td>
                             <td><input class="form-control" type="input" /></td>
                         </tr>
                         <tr>
-                            <td>Credit Card Number</td>
+                            <td>Expiration Date</td>
                             <td><input class="form-control" type="input" /></td>
                         </tr>
                     </tbody>
