add cart in user dropdown

--- a/site/views/basket/checkout.html
+++ b/site/views/basket/checkout.html
@@ -54,7 +54,7 @@
     </div>
     <div class="row" style="margin-top:0px;margin-bottom:20px;">
         <div class="col-md-5">
-            <div>
+            <form method="POST" action="/baskets/purchase">
                 <h4>Payment Info</h4>
                 <table class="table borderless" style="margin-top:20px;">
                     <tbody>
@@ -72,13 +72,7 @@
                         </tr>
                     </tbody>
                 </table>
-            </div>
-        </div>
-    </div>      
-    <div class="row">
-        <div class="col-md-12">
-            <form method="POST" action="/baskets/purchase">
-                <button class="btn btn-success">Purchse</button>
+                <button class="btn btn-success">Purchase</button>
             </form>
         </div>
     </div>
