--- a/site/views/layout/layout.html
+++ b/site/views/layout/layout.html
@@ -47,6 +47,7 @@
                     {% if page.user.is_admin %}
                     <li><a href="/admin" class="glyphicon glyphicon-cog"> Admin</a></li>
                     {% endif %}
+                    <li><a href="/baskets/show" class="glyphicon glyphicon-shopping-cart"> Cart</a></li>
                     <li><a href="/users/{{ page.user._id }}/profile" class="glyphicon glyphicon-home"> Profile</a></li>
                     <li><a href="/users/logout" class="glyphicon glyphicon-log-out"> Logout</a></li>
                 </ul>
