--- a/site/views/basket/receipt.html
+++ b/site/views/basket/receipt.html
@@ -2,19 +2,19 @@
 
 {% block style %}
 {% parent %}
-<link rel="stylesheet" href="/style/basket/index.css">
+<link rel="stylesheet" href="/style/basket/receipt.css">
 {% endblock %}
 
 {% block script %}
 {% parent %}
-<script src="/script/basket/index.js"></script>
+<script src="/script/basket/receipt.js"></script>
 {% endblock %}
 
 {% block content %}
 <div class="container">
     <div class="row">
         <h2 class="col-md-12">
-            Basket Receipt
+            Receipt
         </h2>
     </div>
     <div class="row">
