--- a/site/views/basket/checkout.html
+++ b/site/views/basket/checkout.html
@@ -7,7 +7,7 @@
 
 {% block script %}
 {% parent %}
-<script type="text/javascript" src="/lib/strip/strip.v2.js"></script>
+<script type="text/javascript" src="/library/stripe/stripe.v2.js"></script>
 <script src="/script/basket/checkout.js"></script>
 {% endblock %}
 
