--- a/site/views/basket/receipt.html
+++ b/site/views/basket/receipt.html
@@ -20,6 +20,8 @@
     <div class="row">
         <div class="col-md-12">
             <h4></h4>
+            <div>id: {{ page.charge.id }}</div>
+            <div>amount: {{ page.charge.amount }}</div>
         </div>
     </div>
 </div>
