--- a/site/views/basket/receipt.html
+++ b/site/views/basket/receipt.html
@@ -19,7 +19,7 @@
     </div>
     <div class="row">
         <div class="col-md-12">
-            <h4></h4>
+            <h4>Charge Result</h4>
             <div>id: {{ page.charge.id }}</div>
             <div>amount: {{ page.charge.amount }}</div>
         </div>
