moved payment processing to charge module

--- a/site/views/basket/detail.html
+++ b/site/views/basket/detail.html
@@ -54,7 +54,7 @@
     </div>
     <div class="row">
         <div class="col-md-12">
-            <form method="POST" action="/baskets/checkout">
+            <form method="GET" action="/baskets/checkout">
                 <button class="btn btn-success">Checkout</button>
             </form>
         </div>
