receipt/:id page added

--- a/site/views/charge/receipt.html
+++ b/site/views/charge/receipt.html
@@ -20,8 +20,8 @@
     <div class="row">
         <div class="col-md-12">
             <h4>Charge Result</h4>
-            <div>id: {{ page.charge.id }}</div>
-            <div>amount: {{ page.charge.amount }}</div>
+            <div>id: {{ page.charge.payment_result.id }}</div>
+            <div>amount: {{ page.charge.payment_result.amount }}</div>
         </div>
     </div>
 </div>
