charge module update;admin page update

--- a/site/views/admin/index.html
+++ b/site/views/admin/index.html
@@ -47,6 +47,9 @@
                     <a href="/modules/article/list">Article</a>
                 </div>
                 <div>
+                    <a href="/modules/charge/list">Charge</a>
+                </div>
+                <div>
                     <a href="/modules/component/list">Component</a>
                 </div>
                 <div>
