--- a/site/views/charge/receipt.html
+++ b/site/views/charge/receipt.html
@@ -12,12 +12,20 @@
 
 {% block content %}
 <div class="container">
-    <div class="row">
+    <div class="row" style="margin-bottom:20px;">
         <h2 class="col-md-12">
             Receipt
         </h2>
     </div>
-    <div class="row">
+    <div class="row" style="margin-bottom:20px;">
+        <div class="col-md-12">
+            <h4>Shopping Cart</h4>
+            {% for item in page.charge.shopping_cart.items %}
+            <div>{{ item|json|raw }}</div>
+            {% endfor %}
+        </div>
+    </div>
+    <div class="row" style="margin-bottom:20px;">
         <div class="col-md-12">
             <h4>Charge Result</h4>
             <div>id: {{ page.charge.payment_result.id }}</div>
