typeahead component works

--- a/site/views/layout/layout-composition.html
+++ b/site/views/layout/layout-composition.html
@@ -22,7 +22,7 @@
 <script src="/library/react-d3-components/react-d3-components.min.js"></script>
 <script type="text/javascript" src="/library/ace-editor/src-min-noconflict/ace.js" charset="utf-8"></script>
 <script type="text/javascript" src="/library/quill/quill.js" charset="utf-8"></script>
-<script type="text/javascript" src="/library/typeahead/typeahead.bundle.js" charset="utf-8"></script>
+<script type="text/javascript" src="/library/typeahead/typeahead.js" charset="utf-8"></script>
 
 <script type="text/jsx" src="/component/common/common-mixin.js"></script>
 <script type="text/jsx" src="/script/page/support.js"></script>
