cleanup typeahead css

--- a/site/public/component/form/typeahead.css
+++ b/site/public/component/form/typeahead.css
@@ -57,6 +57,10 @@
           box-shadow: 0 5px 10px rgba(0,0,0,.2);
 }
 
+.tt-menu.tt-open {
+  position: relative !important;
+}
+
 .tt-suggestion {
   padding: 3px 20px;
   font-size: 15px;
