--- a/site/views/user/login-linkedin.html
+++ b/site/views/user/login-linkedin.html
@@ -3,8 +3,8 @@
 {% block script %}
 {% parent %}
 <!-- <script src="/script/user/login.js"></script> -->
-<script type="text/javascript" src="http://platform.linkedin.com/in.js">
-    api_key: "77zt1rgxz1h1hq"
+<script type="text/javascript" src="//platform.linkedin.com/in.js">
+    api_key: 77zt1rgxz1h1hq
     authorize: true
     onLoad: onLinkedInLoad
 </script>
@@ -55,8 +55,6 @@
     
     <div class="row">
         <div class="col-md-6 col-md-offset-3">
-            LinkedIn Login
-            <br/>
             <script type="in/Login"></script>
             <!--
             <form role="form" action="/users/login" method="POST">
