--- a/site/views/user/login-linkedin.html
+++ b/site/views/user/login-linkedin.html
@@ -4,7 +4,7 @@
 {% parent %}
 <!-- <script src="/script/user/login.js"></script> -->
 <script type="text/javascript" src="//platform.linkedin.com/in.js">
-api_key: 77zt1rgxz1h1hq
+api_key: {{ page.linkedinKey }}
 authorize: true
 onLoad: onLinkedInLoad
 </script>
