--- a/site/views/layout/layout-composition.html
+++ b/site/views/layout/layout-composition.html
@@ -16,7 +16,7 @@
 <script src="/library/fluxjs/Dispatcher-dist.js"></script>
 <script src="/library/d3/d3.min.js"></script>
 <script src="/library/webcharts/webcharts.v1_1_1.js"></script>
-<script src="/library/plotly-basic/plotly.min.js"></script>
+<script src="/library/plotly/plotly.min.js"></script>
 <script src="/library/highcharts/highcharts.js"></script>
 <script src="/library/highcharts/modules/treemap.js"></script>
 <script src="/library/react-d3-components/react-d3-components.min.js"></script>
