--- a/site/views/composition/gallery2.html
+++ b/site/views/composition/gallery2.html
@@ -87,6 +87,30 @@ var app = app || { composition:'gallery2' };
             <div class="r9c2 widget-container"></div>
         </div>
     </div>
+    <div class="row row-gallery">
+        <div class="col-md-8">
+            <div class="r10c1 widget-container"></div>
+        </div>
+        <div class="col-md-4">
+            <div class="r10c2 widget-container"></div>
+        </div>
+    </div>
+    <div class="row row-gallery">
+        <div class="col-md-8">
+            <div class="r11c1 widget-container"></div>
+        </div>
+        <div class="col-md-4">
+            <div class="r11c2 widget-container"></div>
+        </div>
+    </div>
+    <div class="row row-gallery">
+        <div class="col-md-8">
+            <div class="r12c1 widget-container"></div>
+        </div>
+        <div class="col-md-4">
+            <div class="r12c2 widget-container"></div>
+        </div>
+    </div>
 </div>
 <div class="container-full-width">
     <div class="f1c1 widget-container"></div>
